--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,6 @@
+#https://emojipedia.org/search/?q=magnifying+glass
+
+
 name: Release Maker
 
 on:
@@ -32,7 +35,7 @@ jobs:
       if: runner.os == 'Linux'
       run: sudo apt-get update && sudo apt-get install ninja-build openssl libomp-dev libopencv-dev libssl-dev openssl libsfml-dev nvidia-cuda-dev nvidia-cuda-toolkit freeglut3-dev qt5-default qtmultimedia5-dev qtbase5-dev-tools qtdeclarative5-dev mesa-common-dev libpcap-dev lld ocl-icd-opencl-dev ocl-icd-libopencl1 opencl-headers libboost-all-dev
 
-    - name: Create Build Environment
+    - name: "✍🏽 Create Build Environment"
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
       run: cmake -E make_directory ${{github.workspace}}/build
@@ -67,7 +70,7 @@ jobs:
       # Execute cpack to build packages
       run: cpack
 
-    - name: Get previous tag
+    - name: "🔍 Get previous tag"
       id: previoustag
       uses: "WyriHaximus/github-action-get-previous-tag@v1"
 
@@ -76,7 +79,7 @@ jobs:
       id: Changelog
 
       # Create Draft Release
-    - name: Create Draft Release
+    - name: "📦 Create Draft Release"
       id: create_release
       uses: actions/create-release@v1
       env:
@@ -88,7 +91,8 @@ jobs:
             ${{ steps.Changelog.outputs.changelog }}
         draft: false
         prerelease: false
-    - name: Upload Release Assets
+
+    - name: "📤 Upload Release Assets"
       id: upload-release-assets
       uses: dwenegar/upload-release-assets@v1
       env:
