--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
       id: previoustag
       uses: "WyriHaximus/github-action-get-previous-tag@v1"
 
-    - name: Changelog
+    - name: "📋 Changelog"
       uses: scottbrenner/generate-changelog-action@master
       id: Changelog
 
