--- a/lib/CUDA/CMakeLists.txt
+++ b/lib/CUDA/CMakeLists.txt
@@ -224,14 +224,14 @@ endif()
 set_property(TARGET vec2d_mult PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
 set_target_properties(vec2d_mult PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
 
-add_executable(vec2d_add vec2d_add.c)
-if (OPENMP_FOUND)
-    target_link_libraries(vec2d_add PRIVATE ${CUDA_LIBRARIES} OpenMP::OpenMP_C my_cuda m cudart)
-else()
-    target_link_libraries(vec2d_add PRIVATE ${CUDA_LIBRARIES} my_cuda cudart)
-endif()
-set_property(TARGET vec2d_add PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
-set_target_properties(vec2d_add PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
+#add_executable(vec2d_add vec2d_add.c)
+#if (OPENMP_FOUND)
+#    target_link_libraries(vec2d_add PRIVATE ${CUDA_LIBRARIES} OpenMP::OpenMP_C my_cuda m cudart)
+#else()
+#    target_link_libraries(vec2d_add PRIVATE ${CUDA_LIBRARIES} my_cuda cudart)
+#endif()
+#set_property(TARGET vec2d_add PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
+#set_target_properties(vec2d_add PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
 
 add_executable(vec2d_mult2 vec2d_mult.cpp)
 if (OPENMP_FOUND)
