--- a/lib/CUDA/CMakeLists.txt
+++ b/lib/CUDA/CMakeLists.txt
@@ -193,7 +193,8 @@ if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.16.0")
 	#target_precompile_headers(convert_utils PUBLIC ${HEADERS})
 endif()
 set_property(TARGET my_cuda PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
-set_target_properties(my_cuda PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
+#set_target_properties(my_cuda PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
+#set_property
 #target_link_libraries(my_cuda PRIVATE ${CUDA_LIBRARIES})
 
 if(APPLE)
@@ -213,7 +214,7 @@ endif()
 add_executable(vec1d vec1d.c)
 target_link_libraries(vec1d PRIVATE ${CUDA_LIBRARIES} my_cuda m cudart)
 set_property(TARGET vec1d PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
-set_target_properties(vec1d PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
+#set_target_properties(vec1d PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
 
 add_executable(vec2d_mult vec2d_mult.c)
 if (OPENMP_FOUND)
@@ -222,7 +223,7 @@ else()
     target_link_libraries(vec2d_mult PRIVATE ${CUDA_LIBRARIES} my_cuda m cudart)
 endif()
 set_property(TARGET vec2d_mult PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
-set_target_properties(vec2d_mult PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
+#set_target_properties(vec2d_mult PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
 
 #add_executable(vec2d_add vec2d_add.c)
 #if (OPENMP_FOUND)
@@ -240,7 +241,7 @@ else()
     target_link_libraries(vec2d_mult2 PRIVATE ${CUDA_LIBRARIES} my_cuda cudart)
 endif()
 set_property(TARGET vec2d_mult2 PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
-set_target_properties(vec2d_mult2 PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
+#set_target_properties(vec2d_mult2 PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
 
 add_executable(vec2d_mult3 vec2d_mult3.cpp)
 if (OPENMP_FOUND)
@@ -249,7 +250,7 @@ else()
     target_link_libraries(vec2d_mult3 PRIVATE ${CUDA_LIBRARIES} my_cuda cudart)
 endif()
 set_property(TARGET vec2d_mult3 PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
-set_target_properties(vec2d_mult3 PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
+#set_target_properties(vec2d_mult3 PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
 
 add_executable(vec3d_mult vec3d_mult.cpp)
 if (OPENMP_FOUND)
@@ -258,7 +259,7 @@ else()
     target_link_libraries(vec3d_mult PRIVATE ${CUDA_LIBRARIES} my_cuda cudart)
 endif()
 set_property(TARGET vec3d_mult PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
-set_target_properties(vec3d_mult PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
+#set_target_properties(vec3d_mult PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
 
 add_executable(vec3d_mult2 vec3d_mult2.cpp)
 if (OPENMP_FOUND)
@@ -267,7 +268,7 @@ else()
     target_link_libraries(vec3d_mult2 PRIVATE ${CUDA_LIBRARIES} my_cuda cudart)
 endif()
 set_property(TARGET vec3d_mult2 PROPERTY CUDA_ARCHITECTURES 52 60 61 62 70 72 75)
-set_target_properties(vec3d_mult2 PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
+#set_target_properties(vec3d_mult2 PROPERTIES AUTOUIC OFF AUTOMOC OFF AUTORCC OFF)
 
 
 set(EDV_PUBLIC_INCLUDE_DIRECTORIES      kernel/)
