--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,7 +66,7 @@ jobs:
 
     - name: "locate"
       if: runner.os == 'Linux'
-      run: ls /usr && ls /opt && locate nvcc
+      run: ls /usr && ls /opt && whereis nvcc && locate nvcc
 
 
     - name: "📥 Install ARM64 Components"
