--- a/lib/CUDA/CMakeLists.txt
+++ b/lib/CUDA/CMakeLists.txt
@@ -72,7 +72,7 @@ endif()
 #if(NOT CUDA_TOOLKIT_ROOT_DIR)
 #    set(CUDA_TOOLKIT_ROOT_DIR "/opt/cuda;/usr;/usr/local/cuda")
 #endif()
-find_package(CUDA 10.0 QUIET)
+#find_package(CUDA 10.0 QUIET)
 if (CUDA_FOUND)
     include_directories(${CUDA_INCLUDE_DIRS} ${BLAS_INCLUDE_DIRS} ${CUDA_CUBLAS_DIRS})
     link_directories(${CUDA_LIBRARIES} ${BLAS_LIBRARIES})
@@ -181,6 +181,9 @@ if(CUDA_VERSION VERSION_GREATER_EQUAL "11.2")
     target_compile_options(my_cuda PRIVATE "-fno-lto") # Disable due issues
 endif()
 
+if(CMAKE_CXX_STANDARD EQUAL 20)
+    target_compile_options(my_cuda PRIVATE "-fno-lto")
+endif()
 
 set_target_properties(my_cuda PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(my_cuda PROPERTIES POSITION_INDEPENDENT_CODE ON)
@@ -206,36 +209,6 @@ if(UNIX)
   # in a default system searched location
   set_property(TARGET my_cuda PROPERTY BUILD_RPATH ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
 endif()
-
-
-message("set(CUDA_TOOLKIT_ROOT_DIR \"${CUDA_TOOLKIT_ROOT_DIR}\")")
-message("set(CUDA_INCLUDE_DIRS \"${CUDA_INCLUDE_DIRS}\")")
-message("set(CUDA_TOOLKIT_INCLUDE \"${CUDA_TOOLKIT_INCLUDE}\")")
-message("set(CUDA_CUDART_LIBRARY \"${CUDA_CUDART_LIBRARY}\")")
-message("set(CUDA_cublas_LIBRARY \"${CUDA_cublas_LIBRARY}\")")
-message("set(CUDA_LIBRARIES \"${CUDA_LIBRARIES}\")")
-message("set(CUDA_cudart_static_LIBRARY \"${CUDA_cudart_static_LIBRARY}\")")
-message("set(CUDA_cudadevrt_LIBRARY \"${CUDA_cudadevrt_LIBRARY}\")")
-message("set(CUDA_NVCC_EXECUTABLE \"${CUDA_NVCC_EXECUTABLE}\")")
-message("set(CUDA_SDK_ROOT_DIR \"${CUDA_SDK_ROOT_DIR}\")")
-message("set(CUDA_SDK_SEARCH_PATH \"${CUDA_SDK_SEARCH_PATH}\")")
-message("set(CUDA_cufft_LIBRARY \"${CUDA_cufft_LIBRARY}\")")
-message("set(CUDA_nppc_LIBRARY \"${CUDA_nppc_LIBRARY}\")")
-message("set(CUDA_nppial_LIBRARY \"${CUDA_nppial_LIBRARY}\")")
-message("set(CUDA_nppicc_LIBRARY \"${CUDA_nppicc_LIBRARY}\")")
-message("set(CUDA_nppicom_LIBRARY \"${CUDA_nppicom_LIBRARY}\")")
-message("set(CUDA_nppidei_LIBRARY \"${CUDA_nppidei_LIBRARY}\")")
-message("set(CUDA_nppif_LIBRARY \"${CUDA_nppif_LIBRARY}\")")
-message("set(CUDA_nppig_LIBRARY \"${CUDA_nppig_LIBRARY}\")")
-message("set(CUDA_nppim_LIBRARY \"${CUDA_nppim_LIBRARY}\")")
-message("set(CUDA_nppist_LIBRARY \"${CUDA_nppist_LIBRARY}\")")
-message("set(CUDA_nppisu_LIBRARY \"${CUDA_nppisu_LIBRARY}\")")
-message("set(CUDA_nppitc_LIBRARY \"${CUDA_nppitc_LIBRARY}\")")
-message("set(CUDA_npps_LIBRARY \"${CUDA_npps_LIBRARY}\")")
-
-message("set(CMAKE_C_COMPILER \"${CMAKE_C_COMPILER}\")")
-message("set(CMAKE_CXX_COMPILER \"${CMAKE_CXX_COMPILER}\")")
-message("set(CMAKE_CUDA_COMPILER \"${CMAKE_CUDA_COMPILER}\")")
 
 add_executable(vec1d vec1d.c)
 target_link_libraries(vec1d PRIVATE ${CUDA_LIBRARIES} my_cuda m)
